Added 6 Try and Exception with 1 custom Exception
Added 6 Try and Exception with 1 custom Exception

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,6 +18,72 @@
       "\n",
       "\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Are you are Student or Teacher?  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****************************************************************************************************************************\n",
+      "*************************************************** Logged in as Student ***************************************************\n",
+      "****************************************************************************************************************************\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your name? fea\n",
+      "What's your ID?  12345\n",
+      "What's your major?(optional) \n",
+      "Are you an undergraduate or postgraduate?(optional) \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "################################\n",
+      "Name:fea ID:12345 \n",
+      "Major:  Degree: \n",
+      "################################\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What Subject Question Set Would You like to Access?  data533\n",
+      "Difficulty(easy, hard, normal):   \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****************************************************************************************************************************\n",
+      "***************************************             Welcome to DATA533.            *****************************************\n",
+      "*************************** There is 2 questions in total in DATA533.  **************************\n",
+      "****************************************************************************************************************************\n",
+      "USER NOT FOUND (Teacher or Student)\n",
+      "USER NOT FOUND (Teacher or Student)\n",
+      "**************************************** \n",
+      "**************************************** \n",
+      "\n",
+      "Final score: 0 out of 2. \n",
+      "\n",
+      "**************************************** \n",
+      "**************************************** \n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -268,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
