--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a7a1bade-15c1-4c1a-ab02-f83741cb7a71",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Are you are Student or Teacher?  \n"
+      "Are you are Student or Teacher?  teacher\n"
      ]
     },
     {
@@ -31,7 +31,7 @@
      "output_type": "stream",
      "text": [
       "****************************************************************************************************************************\n",
-      "*************************************************** Logged in as Student ***************************************************\n",
+      "*************************************************** Logged in as Teacher ***************************************************\n",
       "****************************************************************************************************************************\n"
      ]
     },
@@ -39,10 +39,10 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What's your name? fea\n",
+      "What's your name? daw\n",
       "What's your ID?  12345\n",
-      "What's your major?(optional) \n",
-      "Are you an undergraduate or postgraduate?(optional) \n"
+      "what is your research direction?(optional) \n",
+      "How many years since be a tearcher?(optional) \n"
      ]
     },
     {
@@ -51,8 +51,8 @@
      "text": [
       "\n",
       "################################\n",
-      "Name:fea ID:12345 \n",
-      "Major:  Degree: \n",
+      "Name:daw ID:12345 \n",
+      "Research:  Length: \n",
       "################################\n",
       "\n"
      ]
@@ -73,16 +73,42 @@
       "***************************************             Welcome to DATA533.            *****************************************\n",
       "*************************** There is 2 questions in total in DATA533.  **************************\n",
       "****************************************************************************************************************************\n",
-      "USER NOT FOUND (Teacher or Student)\n",
-      "USER NOT FOUND (Teacher or Student)\n",
+      "Question 1. Which of the following represents a template or blueprint that defines objects of the same type?(Answer in Letter) \n",
+      "A) A class \n",
+      "B) An object \n",
+      "C) A method \n",
+      "D) An attribute \n",
+      "E) None of the above\n",
+      "\n",
+      "Wrong   :( \n",
+      " \n",
+      " \n",
+      "\n",
+      "The correct answer is: A\n",
+      "\n",
+      "Question 2. How many of the following statements are TRUE?(Answer in Letter) \n",
+      "1) Class attributes owned by the class as a whole  \n",
+      "2) Class attributes are shared among all objects of that class \n",
+      "3) Class attributes are good for building counter of how many instances of the class have been made \n",
+      "4) Each instance has its own value for class attribute \n",
+      "\n",
+      "Correct answer is: 3\n",
+      "\n",
       "**************************************** \n",
       "**************************************** \n",
       "\n",
-      "Final score: 0 out of 2. \n",
+      "Final score: 1 out of 2. \n",
       "\n",
       "**************************************** \n",
       "**************************************** \n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "exit? (Y/N) Y\n"
      ]
     }
    ],
@@ -90,11 +116,11 @@
     "data533_q= []\n",
     "data541_q= []\n",
     "\n",
-    "from pkg.pkg1 import information_input as ii\n",
-    "from pkg.pkg1 import information_output as io        \n",
-    "from pkg.pkg1 import information_check as ic\n",
-    "from pkg.pkg2 import Course as co\n",
-    "from pkg.pkg2 import Question as qu\n",
+    "from ubcpkg.pkg1 import information_input as ii\n",
+    "from ubcpkg.pkg1 import information_output as io        \n",
+    "from ubcpkg.pkg1 import information_check as ic\n",
+    "from ubcpkg.pkg2 import Course as co\n",
+    "from ubcpkg.pkg2 import Question as qu\n",
     "\n",
     "v1 = \" \"\n",
     "v2 = \" \"\n",
